--- a/VRChat/33/979333.html
+++ b/VRChat/33/979333.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/d4c0d5357203fd37a6c0.js" defer=
     "defer" nonce=
-    "J5OJD27QFMcqnyN7YWKgiosxEchWnrwnes0NPrZPSYA="></script>
+    "NzSlObd9dMecWxI6u624Duv55skky4ceMdU7M/HK6To="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ペーパーヘッドギア","description":"私がVRChatで使用してるアバターのヘッドギアを、一般的な3Dモデルに付けられるよう形を整えたものです。さらに剣の柄に変形できるギミックを加えました。\n\n刀身まで含めて設定済みのデータを入れているので、ヘッドギア／剣どちらの状態でもすぐにお使いいただけます。\n\n使用に関しては特に禁止事項を設けていません。\n購入後はご自由にお使いください。","url":"https://booth.pm/ja/items/979333","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/1e917239-eb4f-44e6-8fa0-efcfc40c090b/i/979333/ae57bf38-7aa5-438a-a324-f5b5f7edd16c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="J5OJD27QFMcqnyN7YWKgiosxEchWnrwnes0NPrZPSYA="></script>
+    nonce="NzSlObd9dMecWxI6u624Duv55skky4ceMdU7M/HK6To="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -517,7 +517,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;},{&quot;label&quot;:&quot;こみっくトレジャー42&quot;,&quot;value&quot;:&quot;comic-treasure-42&quot;},{&quot;label&quot;:&quot;COMITIA145&quot;,&quot;value&quot;:&quot;comitia145&quot;},{&quot;label&quot;:&quot;TOKYO FES Aug.2023&quot;,&quot;value&quot;:&quot;tokyofes-aug2023&quot;},{&quot;label&quot;:&quot;超COMIC CITY ONLINE-230825-&quot;,&quot;value&quot;:&quot;comiccity-online-230825&quot;}]"
+    "[{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;},{&quot;label&quot;:&quot;こみっくトレジャー42&quot;,&quot;value&quot;:&quot;comic-treasure-42&quot;},{&quot;label&quot;:&quot;COMITIA145&quot;,&quot;value&quot;:&quot;comitia145&quot;},{&quot;label&quot;:&quot;TOKYO FES Aug.2023&quot;,&quot;value&quot;:&quot;tokyofes-aug2023&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
